# flight_delays

./: .gitignore  Labels  README.md  analysis.ipynb  app.py  data_collection.ipynb  model.ipynb  pre-processing.ipynb  pyproject.toml  setup.sh  utils.py
static/: script.js  style.css
templates/: index.html
