[project]
name = "flight-delays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "xgboost>=3.0.2",
]
